// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar component renders a progress bar using default props 1`] = `
<div>
  <div
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="c-rTKYu c-rTKYu-ixnjYu-theme-primary"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="c-igejEK"
      data-max="100"
      data-state="indeterminate"
      style="width: 50%;"
    />
  </div>
</div>
`;

exports[`ProgressBar component renders a solid progress bar 1`] = `
<div>
  <div
    appearance="solid"
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="c-rTKYu c-rTKYu-ixnjYu-theme-primary"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="c-igejEK"
      data-max="100"
      data-state="indeterminate"
      style="width: 50%;"
    />
  </div>
</div>
`;
